--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <h4>h4 title</h4>
     <h5>h5 title</h5>
     <h6>h6 title</h6>
+    <h2>세컨드 html 링크</h2>
+    <a href="./src/second.html">Second html</a>
     <ol>
       <strong>오늘 할 일</strong>
       <li>조교님 뵙기</li>
       <li>6시 회의</li>
-      <li>어소트락 강의 2개</li>
+      <li>강의 2개</li>
       <li>저녁밥 해먹기</li>
     </ol>
     <ul>
@@ -39,9 +41,8 @@
       <li>양배추</li>
       <li>고기</li>
     </ul>
-    <img src="./GaBoong.jpg" alt="" />
+    <img src="img/GaBoong.jpg" alt="" />
     <img src="img/GaBoong2.jpg" alt="" />
     <a href="https://naver.com" target="_blank">go to Naver</a>
-    <a href="./src/second.html">두번째 html 열기</a>
   </body>
 </html>
